// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label/> renders the label children 1`] = `
<label
  className="label"
>
  <span>
    Bar
  </span>
</label>
`;

exports[`<Label/> renders the label text  1`] = `
<label
  className="label"
>
  Foo
</label>
`;
